<resources>
    <string name="app_name">Такси кооперант</string>
    <string name="app_in_background">Апликацијата работи во позадина</string>
    <string name="exit">Излез</string>
    <string name="connection">Конекција:</string>
    <string name="location">Локација:</string>
    <string name="server">Сервер:</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_connected">Connected</string>
    <string name="status_no_connection">No connection</string>
    <string name="gps">GPS</string>
    <string name="network">Network</string>
    <string name="no_location">No location service</string>
    <string name="stop_ringing">Исклучи ѕвонење</string>
    <string name="settings">Подесувања</string>
    <string name="device_id">Број на уред</string>
    <string name="interval">Интервал на праќање пораки</string>
    <string name="volume">Јачина на звук</string>
    <string name="confirm">Потврди</string>
    <string name="error_empty">Полето не смее да биде празно!</string>
    <string name="error_not_numeric">Вредноста мора да биде нумеричка!</string>
    <string name="confirm_code">Код за потврда</string>
    <string name="error_wrong_code">Погрешен код!</string>
    <string name="confirm_exit">Дали сакате да излезете од апликацијата?</string>
    <string name="yes">Да</string>
    <string name="no">Не</string>
    <string name="selected_for_call">Селектиран сте за повик.</string>
    <string name="error_no_permissions">Не може да ја користите апликација без да дозволите да користи локациски сервиси.</string>
</resources>
