<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtConfigurationHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/settings"
        android:textColor="@color/colorBlack"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editDeviceId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_person_outline_black_24dp"
        android:hint="@string/device_id"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editInterval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_loop_black_24dp"
        android:hint="@string/interval"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtVolumeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/volume"
        android:textColor="@color/colorBlack"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_volume_mute_black_24dp" />

        <SeekBar
            android:id="@+id/seekBarVolume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:max="100" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_volume_up_black_24dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/confirm"
        android:textColor="@color/colorDarkText"
        android:textSize="16sp" />
</LinearLayout>