<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.petarvelikov.taxikooperant.view.MainActivity">

    <TextView
        android:id="@+id/txtExit"
        android:text="@string/exit"
        android:drawableEnd="@drawable/ic_power_settings_new_black_24dp"
        android:drawablePadding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textSize="16sp"
        android:padding="8dp"
        />

    <Button
        android:id="@+id/btnStart"
        android:text="Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnStop"
        android:text="Stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:id="@+id/layoutStatus"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">
            <TextView
                android:id="@+id/txtConnectionLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_wifi_black_24dp"
                android:drawablePadding="10dp"
                android:text="@string/connection"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/txtConnectionStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">
            <TextView
                android:id="@+id/txtServerLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_cloud_queue_black_24dp"
                android:drawablePadding="10dp"
                android:text="@string/server"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/txtServerStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">
            <TextView
                android:id="@+id/txtLocationLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_location_on_black_24dp"
                android:drawablePadding="10dp"
                android:text="@string/location"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/txtLocationStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
